--- a/src/vsftpd.conf
+++ b/src/vsftpd.conf
@@ -133,9 +133,9 @@ pasv_enable=NO
 #anonymous
 anonymous_enable=YES
 anon_root=/ftproot
-anon_upload_enable=YES
-anon_mkdir_write_enable=YES
-anon_other_write_enable=YES
+anon_upload_enable=NO
+anon_mkdir_write_enable=NO
+anon_other_write_enable=NO
 
 #common
 local_enable=YES
