完整说明+默认port模式

--- a/src/vsftpd.conf
+++ b/src/vsftpd.conf
@@ -19,7 +19,7 @@
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
-local_umask=022
+#local_umask=022
 
 
 #
@@ -37,10 +37,10 @@ local_umask=022
 dirmessage_enable=YES
 #
 # Activate logging of uploads/downloads.
-xferlog_enable=YES
+#xferlog_enable=YES
 #
 # Make sure PORT transfer connections originate from port 20 (ftp-data).
-connect_from_port_20=YES
+#connect_from_port_20=YES
 #
 # If you want, you can arrange for uploaded anonymous files to be owned by
 # a different user. Note! Using "root" for uploaded files is not
@@ -115,7 +115,7 @@ connect_from_port_20=YES
 # When "listen" directive is enabled, vsftpd runs in standalone mode and
 # listens on IPv4 sockets. This directive cannot be used in conjunction
 # with the listen_ipv6 directive.
-listen=YES
+#listen=YES
 #
 # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
 # sockets, you must run two copies of vsftpd with two configuration files.
@@ -125,10 +125,20 @@ listen=YES
 
 #base
 listen=YES
-#listen_port=21
+listen_port=21
 #listen_ipv6=YES
 seccomp_sandbox=NO
+
+#port
+port_enable=YES
+connect_from_port_20=YES
+ftp_data_port=2020
+
+#pasv
 pasv_enable=NO
+#pasv_address=10.10.10.101
+pasv_min_port=21100
+pasv_max_port=21200
 
 #anonymous
 anonymous_enable=YES
@@ -143,4 +153,9 @@ write_enable=YES
 allow_writeable_chroot=YES
 chroot_local_user=YES
 
-
+#LOG
+dual_log_enable=NO
+xferlog_enable=YES
+vsftpd_log_file=/var/log/vsftpd.log
+xferlog_std_format=NO
+xferlog_file=/var/log/xferlog
