--- a/src/vsftpd.conf
+++ b/src/vsftpd.conf
@@ -125,14 +125,14 @@ dirmessage_enable=YES
 
 #base
 listen=YES
-listen_port=21
-#listen_ipv6=YES
+#listen_port=21
+listen_ipv6=NO
 seccomp_sandbox=NO
 
 #port
 port_enable=YES
-connect_from_port_20=YES
-ftp_data_port=2020
+#connect_from_port_20=YES
+#ftp_data_port=20
 
 #pasv
 pasv_enable=NO
